styles.css
/* ... */
header {
    display: flex;
    flex-direction: column;
    position: sticky;
    padding: 1rem;
}

nav {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
    width: 100%;
}

.title {
    padding: 1rem;
    margin: auto;
}

main {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    height: 100%;
}

menu {
    list-style-type: none;
    height: 100%;
    position: absolute;
    z-index: 1;
    /* overlay page */
    /* fixed position near top left */
    left: 2rem;
}

menu li {
    display: inline-flex;
    overflow: hidden;
}

menu li.nav-item {
    display: none;
    padding: 1rem;
}

img#menu-toggle {
    height: 4rem;
}

.logo {
    position: absolute;
    top: 1rem;
    right: 2rem;
}

.logo a img {
    border-radius: 1rem;
    width: 5rem;
}

.nav-item {
    padding: 0.5rem;
    background-color: white;
}

.nav-item.selected a {
    background-color: black;
    border-radius: 0.5rem;
    padding: 1rem;
    color: white;
}

.nav-item a:hover {
    text-decoration: underline;
    padding: 0.5rem;
}

.nav-item a:active {
    background-color: grey;
    text-decoration: none;
    border-radius: 0.5rem;
    width: 100%;
}


button:hover {
    background-color: black;
    color: white;
    padding: 0.5rem;

}

/* search bar */
.search-bar {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    margin: auto;
}

.search-bar-container {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    margin: auto;
    min-width: 30rem;
}

.search-box {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin: auto;
    border-radius: 0.5rem;
    border: 0.5rem solid black;
    width: 100%;
    max-height: 5rem;
    padding: 0.5rem;
}

input#search {
    /* width: 100%;
    height: 100%;
    border: none; */
    font-size: large;
    padding: 0.5rem;
}

input#search:focus {
    outline: none;
}

.search-button {
    padding: 1rem;
    border: 2px solid black;
    border-radius: 0.5rem;
    width: 5rem;
    background-color: white;
}

.search-button:hover {
    background-color: grey;
}

.search-matching-list {
    display: inline-block;
    margin: 0;
    padding: 0;
    background-color: tomato;
}

/* .search-matching-list li {
    background-color: lime;
    border: 1px solid black;
    margin-top: -1px;
    padding: 12px;
    text-align: left;
}

.search-matching-list li:hover {
    background-color: magenta;
} */

section {
    padding: 1rem;
    margin: 0.5rem;
}

/* ticket */
.ticker-block {
    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    max-width: 80%;

}

.ticker-span {
    text-wrap: nowrap;
    border: solid 0.2rem black;
    padding: 1rem;
    min-width: 50%;
    overflow: hidden;
}

/* actions */
.actions-label {
    align-self: flex-start;
    padding: 0 1rem;
    font-weight: bold;

}

.action-button {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    min-width: 10rem;
    padding: 1rem;
    border: 2px solid black;
    border-radius: 0.5rem;
}

.submit {
    padding: 0.2rem;
}

/* stats block */
.stats {
    min-width: 50%;
    border-radius: 0.5rem;
    border: solid 0.1rem black;
    padding: 1rem 0;
}

.stats-label {
    align-self: flex-start;
    padding: 0 1rem;
    font-weight: bold;
}

.stat {
    align-self: flex-start;
    padding: 0.5rem 1rem;
}

.ranking-label {
    padding: 1rem;
}

.ranked-visited {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
}

.ranked-visited-list {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-around;
}

/* results page */
.search-results-header {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    margin: 0 auto;
    max-width: 80%;
}

.search-results {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: center;
    margin: 1rem auto;
    max-width: 90%;
    border-radius: 0.5rem;
    border: solid 0.1rem black;
}

.search-result {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
    width: 90%;
    /* margin: 1rem auto; */
}

.search-result-image {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    align-self: flex-start;
    margin: 1rem;

}

.img-search-result {
    border-radius: 0.5rem;
    border: solid 0.1rem black;
    padding: 1rem;
}

a:hover.search-result-link {
    background-color: rgba(255, 255, 255, 0.5);
    text-decoration: none;
    border-radius: 1rem;
}

.search-result-text {
    min-width: 50%;
}

.pagination {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
}

.pagination-button {
    margin: auto;
    padding: 1rem;
}

/* footer */
footer {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 3rem;
    border-top: 2px solid black;
}

.footer-item {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
}

/* alien details page */
.alien-main-banner {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    margin: auto;
    width: 90%;
}

.alien-name-max {
    align-self: flex-start;
    padding: 0.5rem;
}
/* ... */

